docker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-fuchicorp-docker-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 2000m
    nginx.org/client-max-body-size: 2000m
  name: docker-ingress
  namespace: tools
spec:
  rules:
  - host: docker.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: nexus-service
          servicePort: 8085
  tls:
  - hosts:
    - docker.fuchicorp.com
    secretName: tls-docker-prod-cert
