ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fuchicorp-apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:

  - host: jenkins.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: jenkins-service
          servicePort: 8080

  - host: grafana.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 8081

  - host: vault.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: vault-service
          servicePort: 8082

  - host: nexus.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: nexus-service
          servicePort: 8083

  - host: jira.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: jira-service
          servicePort: 8084
